--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@
         width: 100%;
         margin-top: 0;
         box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
-        top: 0s;
+        top: 0;
 
         
     }
